# mechanics

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  hardcore-programming-mechanical-engineers.cabal  mechanics.cabal
.github/workflows/: mechanics.yaml
app/: CircleFromPoints.hs
app/CircleFromPoints/: Input.hs  Main.hs  Output.hs  config.dhall  test.txt
src/: Geom2d.hs
src/Geom2d/: AffineTransf.hs  AffineTransforms.hs  Circle.hs  Circles.hs  Interpolation.hs  Line.hs  Nums.hs  OpenInterval.hs  Point.hs  Polygon.hs  Polygons.hs  Rect.hs  Rects.hs  Segment.hs  Size.hs  TParameter.hs  Vector.hs  Vectors.hs
src/Geom2d/TParameter/: Internal.hs
src/Graphic/Simulation/: Draw.hs
src/Graphic/Svg/: Attributes.hs  Image.hs  Primitives.hs  Read.hs
src/Graphic/Svg/templates/: circle  group  img  line  polygon  polyline  rect  text
src/Utils/: Pairs.hs
test/: Main.hs
test/Geom2d/: AffineTransfSpec.hs  AffineTransformsSpec.hs  CircleSpec.hs  CirclesSpec.hs  InterpolationSpec.hs  LineSpec.hs  OpenIntervalSpec.hs  PointSpec.hs  PolygonSpec.hs  RectSpec.hs  RectsSpec.hs  SegmentSpec.hs  VectorSpec.hs
test/Graphics/: PrimitivesSpec.hs
