cabal-version:      3.0
name:               hardcore-programming-mechanical-engineers
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Zarak
maintainer:         7254237+zarak@users.noreply.github.com
-- copyright:
category:           Engineering
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    other-modules:    Geom2d.Nums
                    , Geom2d.Point
                    , Geom2d.Vector
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , ieee754
    hs-source-dirs:   src
    default-language: GHC2021

executable hardcore-programming-mechanical-engineers
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        hardcore-programming-mechanical-engineers

    hs-source-dirs:   app
    default-language: GHC2021

test-suite hardcore-programming-mechanical-engineers-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        hardcore-programming-mechanical-engineers
