cabal-version:      3.0
name:               hardcore-programming-mechanical-engineers
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Zarak
maintainer:         7254237+zarak@users.noreply.github.com
-- copyright:
category:           Engineering
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
                    -- , Geom2d
                    , Geom2d.Point 
                    , Geom2d.Vector
                    , Geom2d.Nums
                    , Geom2d.Vectors
                    , Geom2d.Segment
                    , Geom2d.Line
                    , Geom2d.Polygon
                    , Geom2d.Circle
                    , Geom2d.Size
                    , Geom2d.TParameter
                    , Geom2d.TParameter.Internal
                    , Geom2d.Rect
                    , Geom2d.Rects
                    , Geom2d.OpenInterval
                    , Geom2d.AffineTransf
                    , Geom2d.AffineTransforms
                    , Geom2d.Interpolation
                    , Graphic.Svg.Read
                    , Graphic.Svg.Image
                    , Graphic.Svg.Primitives
                    , Graphic.Svg.Attributes
                    , Utils.Pairs
    -- other-modules:
    default-extensions: OverloadedRecordDot 
                      , OverloadedStrings
                      , NegativeLiterals
    build-depends:    base ^>=4.16.4.0
                    , ieee754
                    , text
                    , bytestring
                    , directory
    hs-source-dirs:   src
    default-language: GHC2021

executable circle-from-points
    import:           warnings
    main-is:          Main.hs
    other-modules:    Input
    build-depends:    base ^>=4.16.4.0,
                      hardcore-programming-mechanical-engineers, 
                      megaparsec,
                      text-manipulate,
                      text,
                      dhall
    hs-source-dirs:   app/CircleFromPoints
    default-language: GHC2021

executable hardcore-programming-mechanical-engineers
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        hardcore-programming-mechanical-engineers

    hs-source-dirs:   app
    default-language: GHC2021

test-suite hardcore-programming-mechanical-engineers-test
    import:           warnings
    default-language: GHC2021
    other-modules:    Geom2d.PointSpec
                    , Geom2d.VectorSpec
                    , Geom2d.SegmentSpec
                    , Geom2d.LineSpec
                    , Geom2d.PolygonSpec
                    , Geom2d.CircleSpec
                    , Geom2d.RectSpec
                    , Geom2d.RectsSpec
                    , Geom2d.OpenIntervalSpec
                    , Geom2d.AffineTransfSpec
                    , Geom2d.AffineTransformsSpec
                    , Geom2d.InterpolationSpec
                    , Graphics.PrimitivesSpec
    default-extensions: OverloadedRecordDot 
                      , NegativeLiterals
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.16.4.0,
        hardcore-programming-mechanical-engineers,
        hspec,
        hspec-contrib,
        QuickCheck,
        test-invariant

